<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:id="@+id/sort_settings_layout">

    <com.seguetech.zippy.ui.TypeManagedTextView
        app:typeface="robotoslab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_direction"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="horizontal">

        <com.seguetech.zippy.ui.TypeManagedTextView
            app:typeface="sourcesanspro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/a_to_z"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/ascending"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <com.seguetech.zippy.ui.TypeManagedTextView
            app:typeface="sourcesanspro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/z_to_a"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/descending"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>


    <com.seguetech.zippy.ui.TypeManagedTextView
        app:typeface="robotoslab"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="horizontal">

        <com.seguetech.zippy.ui.TypeManagedTextView
            app:typeface="sourcesanspro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/brand_name"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/brand_name"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <com.seguetech.zippy.ui.TypeManagedTextView
            app:typeface="sourcesanspro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/generic_name"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/generic_name"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

</LinearLayout>