<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/light_blue"
    tools:context="com.seguetech.zippy.activities.SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/splash_logo"
        android:contentDescription="@string/app_name"
        android:id="@+id/logo"
        />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"

    >

        <com.seguetech.zippy.ui.TypeManagedTextView
            app:typeface="robotoslab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_information_checker"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:id="@+id/byline"
            />
        <com.seguetech.zippy.ui.TypeManagedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powered_by_segue"
            app:typeface="robotoslab"
            android:layout_below="@+id/byline"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            />

    </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
