<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_layout"
    tools:context="com.seguetech.zippy.fragments.SearchFragment">


    <RelativeLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="2dp"
        android:background="@android:color/white">
        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/magnify_icon"
            android:background="@null"
            android:contentDescription="@string/search"
            android:text="@string/search"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/search_button"
            android:layout_toStartOf="@+id/search_button"
            android:layout_centerVertical="true"
            app:hintTextAppearance="@style/SearchTextAppearance">

        <com.seguetech.zippy.ui.TypeManagedAutoCompleteTextView
                app:typeface="sourcesanspro"
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:hint="@string/search_hint"
                app:hintTextAppearance="@style/SearchTextAppearance"
                >
            </com.seguetech.zippy.ui.TypeManagedAutoCompleteTextView>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/inputLayout"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_results"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
         />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:id="@android:id/empty"
            >
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/search_logo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            >


            <View android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <com.seguetech.zippy.ui.TypeManagedTextView
            app:typeface="robotslab"
            android:text="@string/get_meducated"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:gravity="center"/>

            <View android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>
        </LinearLayout>

    </FrameLayout>


</RelativeLayout>
